--- a/css/styles.css
+++ b/css/styles.css
@@ -183,10 +183,9 @@ nav li {
   font-family: 'Roboto Slab', serif;
   font-size: 100%;
   font-weight: 700;
-  width: 24.95%;
-  max-width: 110px;
   border-bottom: none;
-  display: inline-block;
+  display: block;
+  width: 100%;
 }
 
 
@@ -232,7 +231,7 @@ nav a:hover {
 .group { zoom:1; /* For IE 6/7 */ }
 
 .span_1_of_2 {
-  width: 48.2%;
+  width: 100%;
 }
 .span_2_of_2{
   width: 100%;
@@ -316,7 +315,7 @@ input.button:hover {
 }
 
 .nwsltr-input {
-    width: 80%;
+    width: 100%;
     display: block;
     border: 1px solid #c0af8e;
     border-radius: 3px;
@@ -336,9 +335,9 @@ input.button:hover {
     text-transform: uppercase;
     font-weight: 700;
     height: 40px;
-    width: 18%;
+    width: 100%;
     margin: 0 0 10px 0;
-    float: right;
+    display: block;
 }
 
 .nwsltr-btn:hover {
@@ -388,3 +387,27 @@ footer {
     background-color: #333333;
     color: #F2F2F2;
 }
+
+@media screen and (min-width: 994px) {
+  .span_1_of_2 {
+    width: 48.2%;
+  }
+  nav {
+    margin-top: 4em;
+  }
+
+ nav li {
+    width: 24.5%;
+    display: inline-block;
+    max-width: 110px;
+  }
+
+ .nwsltr-btn{
+   width: 20%;
+   float: right;
+  }
+  .nwsltr-input {
+    width: 70%;
+    float: left;
+  }
+} /*@media*/
