--- a/css/styles.css
+++ b/css/styles.css
@@ -394,12 +394,6 @@ footer {
     color: #F2F2F2;
 }
 
-<<<<<<< HEAD
-@media screen and (min-width: 994px) {
-  .span_1_of_2 {
-    width: 48.2%;
-  }
-=======
 
 /* ==========================================================================
    Media Queries
@@ -409,23 +403,16 @@ footer {
       width: 49.2%;
   }
 
->>>>>>> 5fa45f562a2e812b083a59060131e87c56172793
+
   nav {
     margin-top: 4em;
-  }
-
-<<<<<<< HEAD
- nav li {
-    width: 24.5%;
-    display: inline-block;
-    max-width: 110px;
   }
 
  .nwsltr-btn{
    width: 20%;
    float: right;
   }
-=======
+
   nav li {
       width: 24.95%;
       max-width: 110px;
@@ -433,18 +420,13 @@ footer {
       display: inline-block;
   }
 
->>>>>>> 5fa45f562a2e812b083a59060131e87c56172793
   .nwsltr-input {
     width: 70%;
     float: left;
   }
-<<<<<<< HEAD
-} /*@media*/
-=======
 
-  .nwsltr-btn {
-    width: 20%;
-  }
 
+#map  {
+  height: 400px;
+  width: 100%;
 }
->>>>>>> 5fa45f562a2e812b083a59060131e87c56172793
